<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.proyecto.appproffrontend.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/usuarioProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tlfnoProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/tlfnoProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/emailProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciudadProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/ciudadProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView  android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horarioProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/horariosProfesor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>


            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asignaturasProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/asignaturasProfesor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>


            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cursosProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <Spinner
                    android:id="@+id/cursosProfesor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30sp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modalidadProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/modalidadProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>

            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experienciaProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/experienciaProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valoracionProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <RatingBar android:id="@+id/valoracionProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:isIndicator="true"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/modifyProfesor"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_mod_prof"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/pagarProfesor"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_pag_prof"
                    android:textStyle="bold" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
