<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.proyecto.appproffrontend.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Campos obligatorios"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usarioProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <TextView android:id="@+id/usuarioProfesorMod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tlfnoProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <EditText android:id="@+id/tlfnoProfesorMod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <EditText android:id="@+id/emailProfesorMod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciudadProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>
                <EditText android:id="@+id/ciudadProfesorMod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView  android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horarioProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>

                <com.example.proyecto.appproffrontend.MultiSpinner
                    android:id="@+id/horariosProfesorMod"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>


            </LinearLayout>


            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asignaturasProfesor"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"/>

                <com.example.proyecto.appproffrontend.MultiSpinner
                    android:id="@+id/asignaturasProfesorMod"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/siguienteMod"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/siguiente"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
